
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
void Huff_DeleteNode( void **tree1, void **tree2 ) {
 tree2[0] = tree1[262];
 tree1[262] = tree2;
}
